--- a/TODO
+++ b/TODO
@@ -3,11 +3,10 @@
 * Incorporate local_cache
 * Incorporate cache_mock
 * Release new railsprof plugin
-* Release test helper
+* Release test helper (timings etc.)
 * Deal with TTL issues
 * Implement read-through strategy using add
 * Handle append strategy using add rather than set to avoid race condition
 * Uncovered update case
-* Deal with namespace pollution
+* Deal with namespace pollution * scope private methods
 * Clarify terminology around cache/key/index, etc.
-* 
