--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
+* there's a bug with find(1, :conditions => ...) and with_scope
+* there's a bug with mismatched table names on matching index/columns
 * test on AR::Base
 * windowing
-* attribute value pairs ugly sideffect
+* remove all "should" BS
 
 * Reorganize transactional spec
 * Clarify terminology around cache/key/index, etc.
