--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * there's a bug with find(1, :conditions => ...) and with_scope
 * test on AR::Base
 * windowing
+* index #ttl, order, limit private?
 
 * Reorganize transactional spec
 * Clarify terminology around cache/key/index, etc.
